// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-data"
  >
    <ExpenseListItem
      amount={12000}
      createdAt={0}
      description="Gas Bill"
      id="1"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={-345600000}
      description="Electricity Bill"
      id="2"
      note=""
    />
    <ExpenseListItem
      amount={5000}
      createdAt={691200000}
      description="New Watch"
      id="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render Expense List without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-data"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expense Found
      </span>
    </div>
  </div>
</div>
`;
